# audience

./: .gitignore  CMakeLists.txt  README.md
etc/: cflags.cmake  find_cryptopp.cmake
src/frontend/: ws_media_server.cc
src/media-server/: channel.cc  client_message.cc  client_message.hh  server_message.hh  ws_client.cc  ws_client.hh
src/net/: socket.cc
src/notifier/: notifier.cc
src/portal/: .gitignore  requirements.txt  runserver.sh
src/portal/accounts/templates/accounts/: signup.html
src/portal/accounts/templates/registration/: login.html
src/portal/portal/: settings.py  urls.py
src/portal/puffer/: admin.py  models.py  urls.py  views.py
src/portal/puffer/migrations/: 0001_initial.py  0002_auto_20201005_2119.py  0003_audiencefeedback.py  0004_audiofeedback.py  0005_auto_20201022_1614.py  0006_auto_20201104_0948.py  0007_userprofile_chat_blocked.py
src/portal/puffer/static/css/: player.css
src/portal/puffer/static/js/: player.js  puffer.js
src/portal/puffer/templates/puffer/: 404.html  index.html  navigation.html  player.html
src/util/: file_descriptor.hh  ipc_socket.cc  yaml.cc
